# rag-chatbot-

./: .env.example  .gitignore  CLAUDE.md  frontend-changes.md  pyproject.toml
backend/: IMPLEMENTATION_SUMMARY.md  SEQUENTIAL_TOOL_CALLING.md  TEST_SUMMARY.md  ai_generator.py  app.py  config.py  document_processor.py  pytest.ini  rag_system.py  search_tools.py  session_manager.py  vector_store.py  zhipuai_embedding.py
backend/tests/: conftest.py  test_ai_generator.py  test_api.py  test_rag_system.py  test_search_tools.py  test_vector_store.py
frontend/: index.html  script.js  style.css
scripts/: quality.sh
